# PBB

./: .gitignore  CMakeLists.txt  CMakePresets.json  Issues.md  README.md  build.sh  build_linux_all.sh  install.sh  loc.sh
.github/workflows/: build-and-test.yml  windows-build-and-test.yml
Examples/: CMakeLists.txt  InstallPBB.cmake  RunExample.cmake
Examples/Linux/Usage/: CMakeLists.txt  main.cxx
PBB/: CMakeLists.txt  Common.hpp  Config.h.in  DetectionTraits.hpp  FakeThreadPool.hpp  IThreadLocal.hpp  MRMWQueue.hpp  Memory.hpp  MeyersSingleton.hpp  PBBConfig.cmake.in  ParallelFor.hpp  PhoenixSingleton.hpp  PhoenixSingleton2.hpp  PhoenixSingletonRef.hpp  Platform.hpp  ResettableSingleton.hpp  SMPTools.cxx  SMPTools.h  SMPTools.hpp  SMPTools.txx  SMPToolsImpl.h  SMPToolsInternal.hpp  SafeFunctors.hpp  SafeFunctors.txx  SafeFunctorsInternal.hpp  SafePool.h  SafeThreadLocal.hpp  SafeThreadLocalBackendImpl.hpp  SafeThreadLocalImpl.hpp  SafeThreadPool.h  SafeToolsAPI.cxx  SafeToolsAPI.h  Singletons.md  Solution.txt  ThreadLocal.cxx  ThreadLocal.hpp  ThreadLocal.txx  ThreadLocalImpl.hpp  ThreadPool.cxx  ThreadPool.hpp  (+18 more)
PBB/Testing/Cxx/: CMakeLists.txt  MRMWQueueTest.cxx  MemoryTest.cxx  MeyersSingletonTest.cxx  ParallelForTest.cxx  PhoenixSingletonRefTest.cxx  PhoenixSingletonTest.cxx  ThreadLocalTest.cxx  ThreadPoolCustomTest.cxx  ThreadPoolSingletonTest.cxx  ThreadPoolTest.cxx
